--- a/frontend/src/pages/order_S/Orders/index.scss
+++ b/frontend/src/pages/order_S/Orders/index.scss
@@ -1,54 +1,37 @@
 .OrderS {
-  border: 1px solid black;
-  width: 1200px;
-  height: 100vh;
+  padding: 16px;
+
   .header {
-    // border: 1px solid blue;
-    ul {
+    margin-bottom: 16px;
+
+    .btn-list {
       display: flex;
+      gap: 10px;
       list-style: none;
-      width: 450px;
+      padding: 0;
 
-      li {
-        border: 1px solid #ececec;
-        padding: 5px 10px;
-
-        a {
-          color: black;
-        }
-        .active {
-          color: #549bf8;
+      a {
+        padding: 6px 12px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        text-decoration: none;
+        color: #333;
+        &.active {
+          background-color: #1677ff;
+          color: #fff;
+          border-color: #1677ff;
         }
       }
     }
   }
-  .OperationButton {
-    // border: 1px solid blue;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    // border: 1px solid red;
-    .OperationButton-left {
-      Button {
-        margin-left: 20px;
-      }
-    }
 
-    .OperationButton-right {
-      margin-right: 20px;
-      ul {
-        list-style: none;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        // border: 1px solid blue;
-        width: 200px;
-        height: 50px;
-        padding: 20px 10px;
-        // margin-right: 10px;
-        li {
-        }
-      }
-    }
+  .search-bar {
+    margin-bottom: 16px;
+  }
+
+  .table-section {
+    background-color: #fff;
+    padding: 16px;
+    border-radius: 8px;
   }
 }
